--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# idea
+.iml
+
 # Compiled Lua sources
 luac.out
 
@@ -39,3 +42,6 @@ luac.out
 *.x86_64
 *.hex
 
+.idea/
+kong-plugins.iml
+kong-uma-rs/kong-uma-rs.iml
