--- a/kongGUI/bower.json
+++ b/kongGUI/bower.json
@@ -24,7 +24,6 @@
     "amcharts": "~3.15.2",
     "amcharts-stock": "*",
     "ammap": "~3.14.5",
-    "angular": "~1.5.8",
     "angular-route": "~1.5.8",
     "angular-slimscroll": "~1.1.5",
     "angular-smart-table": "~2.1.3",
@@ -57,10 +56,12 @@
     "angular-ui-select": "^0.19.6",
     "lodash": "^4.17.4",
     "angular-loading-bar": "^0.9.0",
-    "checklist-model": "^0.11.0"
+    "checklist-model": "^0.11.0",
+    "angular": "1.4.8",
+    "ngstorage": "^0.3.11"
   },
   "resolutions": {
-    "angular": "~1.5.9",
+    "angular": "1.4.8",
     "jquery": "~3.1.1"
   },
   "overrides": {
