--- a/kongGUI/bower.json
+++ b/kongGUI/bower.json
@@ -58,7 +58,8 @@
     "lodash": "^4.17.4",
     "angular-loading-bar": "^0.9.0",
     "checklist-model": "^0.11.0",
-    "ngstorage": "^0.3.11"
+    "ngstorage": "^0.3.11",
+    "ng-tags-input": "3.2.0"
   },
   "resolutions": {
     "angular": "~1.5.9",
