--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -95,7 +95,7 @@ ssl_cert = %(kongSslCert)s
                                  # If `ssl` is enabled, the absolute path to
                                  # the SSL key for the `proxy_listen_ssl`
                                  # address.
-ssl_cert_key = $(kongSslKey)s
+ssl_cert_key = %(kongSslKey)s
 
 #------------------------------------------------------------------------------
 # DATASTORE
