--- a/oxd-kong/package.json
+++ b/oxd-kong/package.json
@@ -41,6 +41,7 @@
     "include-all": "^1.0.0",
     "ip": "^1.1.5",
     "jsonwebtoken": "5.4.1",
+    "ldapjs": "^1.0.1",
     "lodash": "3.10.1",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
@@ -54,6 +55,7 @@
     "nodemailer-mailgun-transport": "^1.3.5",
     "passport": "0.3.0",
     "passport-local": "1.0.0",
+    "randomstring": "^1.1.5",
     "rc": "1.0.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
