Changed postgres configuration

--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -114,7 +114,7 @@ database = postgres              # Determines which of PostgreSQL or Cassandra
 
 pg_host = 127.0.0.1             # The PostgreSQL host to connect to.
 pg_port = 5432                  # The port to connect to.
-pg_user = kong                  # The username to authenticate if required.
+pg_user = postgres                  # The username to authenticate if required.
 pg_password = %(pgPwd)s         # The password to authenticate if required.
 pg_database = kong              # The database name to connect to.
 
