--- a/setup/templates/oxd-default-site-config.json
+++ b/setup/templates/oxd-default-site-config.json
@@ -1,5 +1,5 @@
 {
-  "op_host":"%(oxdKongOPHost)s",
+  "op_host":"%(kongaOPHost)s",
   "op_discovery_path":"%(oxdServerOPDiscoveryPath)s",
   "authorization_redirect_uri":"%(oxdServerAuthorizationRedirectUri)s",
   "post_logout_redirect_uri":"",
