--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -88,7 +88,7 @@ admin_listen = %(ip)s:8001     # Address and port on which Kong will expose
                                  # This API lets you configure and manage Kong,
                                  # and should be kept private and secured.
 
-admin_listen_ssl = %(ip)s:8444 # Address and port on which Kong will accept
+admin_listen_ssl = %(ip)s:%(kongAdminListenSsl)s # Address and port on which Kong will accept
                                  # HTTPS requests to the admin API, if
                                  # `admin_ssl` is enabled.
 
