Error handling in konga config

--- a/setup/templates/oxd-default-site-config.json
+++ b/setup/templates/oxd-default-site-config.json
@@ -1,9 +1,9 @@
 {
   "op_host":"%(kongaOPHost)s",
   "op_discovery_path":"%(oxdServerOPDiscoveryPath)s",
-  "authorization_redirect_uri":"%(oxdServerAuthorizationRedirectUri)s",
+  "authorization_redirect_uri":"",
   "post_logout_redirect_uri":"",
-  "redirect_uris":["%(oxdServerAuthorizationRedirectUri)s"],
+  "redirect_uris":[""],
   "response_types":["code"],
   "grant_type":["authorization_code"],
   "acr_values":[""],
