Solved proxy listen issue by modifying kong config

--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -72,7 +72,7 @@ custom_plugins =  %(kongCustomPlugins)s                # Comma-separated list of
 # NGINX
 #------------------------------------------------------------------------------
 
-proxy_listen = %(ip)s:8000     # Address and port on which Kong will accept
+proxy_listen = 0.0.0.0:8000     # Address and port on which Kong will accept
                                  # HTTP requests.
                                  # This is the public-facing entrypoint of
                                  # Kong, to which your consumers will make
@@ -80,15 +80,15 @@ proxy_listen = %(ip)s:8000     # Address and port on which Kong will accept
 # Note: See http://nginx.org/en/docs/http/ngx_http_core_module.html#listen for
 # a description of the accepted formats for this and other *_listen values.
 
-proxy_listen_ssl = %(ip)s:443 # Address and port on which Kong will accept
+proxy_listen_ssl = 0.0.0.0:443 # Address and port on which Kong will accept
                                  # HTTPS requests if `ssl` is enabled.
 
-admin_listen = %(ip)s:8001     # Address and port on which Kong will expose
+admin_listen = 0.0.0.0:8001     # Address and port on which Kong will expose
                                  # an entrypoint to the Admin API.
                                  # This API lets you configure and manage Kong,
                                  # and should be kept private and secured.
 
-admin_listen_ssl = %(ip)s:%(kongAdminListenSsl)s # Address and port on which Kong will accept
+admin_listen_ssl = 0.0.0.0:%(kongAdminListenSsl)s # Address and port on which Kong will accept
                                  # HTTPS requests to the admin API, if
                                  # `admin_ssl` is enabled.
 
