--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -29,7 +29,7 @@
                                  # Each Kong process must have a separate
                                  # working directory.
 
-#log_level = notice              # Log level of the Nginx server. Logs are
+log_level = debug              # Log level of the Nginx server. Logs are
                                  # found at <prefix>/logs/error.log
 # Note: See http://nginx.org/en/docs/ngx_core_module.html#error_log for a list
 # of accepted values.
