Add ssl cert to kong admin apis

--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -162,11 +162,11 @@ ssl_cert_key = %(kongSslKey)s                  # If `ssl` is enabled, the absolu
                                  # itself on `admin_listen`, and all SSL
                                  # settings will be ignored.
 
-#admin_ssl_cert =                # If `admin_ssl` is enabled, the absolute path
+admin_ssl_cert = %(kongSslCert)s               # If `admin_ssl` is enabled, the absolute path
                                  # to the SSL certificate for the
                                  # `admin_listen_ssl` address.
 
-#admin_ssl_cert_key =            # If `admin_ssl` is enabled, the absolute path
+admin_ssl_cert_key = %(kongSslKey)s           # If `admin_ssl` is enabled, the absolute path
                                  # to the SSL key for the `admin_listen_ssl`
                                  # address.
 
