katalon test element wait

--- a/tests/katalon/Gluu Gateway/bin/lib/.gitignore
+++ b/tests/katalon/Gluu Gateway/bin/lib/.gitignore
@@ -22,3 +22,4 @@
 /TempTestCase1524898828982.class
 /TempTestCase1524898982464.class
 /TempTestCase1524899036314.class
+/TempTestCase1524900488428.class
