Katalo test allow change

--- a/tests/katalon/Gluu Gateway/bin/lib/.gitignore
+++ b/tests/katalon/Gluu Gateway/bin/lib/.gitignore
@@ -1,1 +1,4 @@
 /TempTestCase1524989155412.class
+/TempTestCase1524989714916.class
+/TempTestCase1524989867807.class
+/TempTestCase1524989975151.class
