Katalon test fixes

--- a/tests/katalon/Gluu Gateway/bin/lib/.gitignore
+++ b/tests/katalon/Gluu Gateway/bin/lib/.gitignore
@@ -2,3 +2,4 @@
 /TempTestCase1524989714916.class
 /TempTestCase1524989867807.class
 /TempTestCase1524989975151.class
+/TempTestCase1524990887659.class
