Katalon tests fixes

--- a/tests/katalon/Gluu Gateway/bin/lib/.gitignore
+++ b/tests/katalon/Gluu Gateway/bin/lib/.gitignore
@@ -3,3 +3,6 @@
 /TempTestCase1524989867807.class
 /TempTestCase1524989975151.class
 /TempTestCase1524990887659.class
+/TempTestCase1524992852767.class
+/TempTestCase1524992953696.class
+/TempTestCase1524993022198.class
