katalon test custom selector change

--- a/tests/katalon/Gluu Gateway/bin/lib/.gitignore
+++ b/tests/katalon/Gluu Gateway/bin/lib/.gitignore
@@ -6,3 +6,6 @@
 /TempTestCase1524992852767.class
 /TempTestCase1524992953696.class
 /TempTestCase1524993022198.class
+/TempTestCase1524993983922.class
+/TempTestCase1524994168315.class
+/TempTestCase1524994316173.class
