Katalon OAuth element find fix

--- a/tests/katalon/Gluu Gateway/bin/lib/.gitignore
+++ b/tests/katalon/Gluu Gateway/bin/lib/.gitignore
@@ -9,3 +9,8 @@
 /TempTestCase1524993983922.class
 /TempTestCase1524994168315.class
 /TempTestCase1524994316173.class
+/TempTestCase1524995194148.class
+/TempTestCase1524995272572.class
+/TempTestCase1524995303480.class
+/TempTestCase1524995493249.class
+/TempTestCase1524995640898.class
