--- a/konga/bower.json
+++ b/konga/bower.json
@@ -46,7 +46,8 @@
     "angular-base64": "~2.0.5",
     "ngInfiniteScroll": "^1.3.4",
     "angular-xeditable": "^0.7.1",
-    "ng-tags-input": "^3.2.0"
+    "ng-tags-input": "^3.2.0",
+    "ng-idle": "^1.3.2"
   },
   "devDependencies": {
     "angular-mocks": "1.3.13"
