Fixed the flow of UMA Mode

--- a/tests/katalon/Gluu Gateway/bin/lib/.gitignore
+++ b/tests/katalon/Gluu Gateway/bin/lib/.gitignore
@@ -1,14 +1,13 @@
-/TempTestSuite1526265916517.class
-/TempTestCase1526266119128.class
-/TempTestCase1526266256338.class
-/TempTestCase1526266755094.class
-/TempTestCase1526266918393.class
-/TempTestCase1526267135814.class
-/TempTestCase1526267340817.class
-/TempTestCase1526267609773.class
-/TempTestCase1526268431945.class
-/TempTestCase1526268596090.class
-/TempTestSuite1526268759435.class
-/TempTestSuite1526268950617.class
-/TempTestSuite1526269336427.class
-/TempTestSuite1526269782444.class
+/TempTestCase1526820460521.class
+/TempTestCase1526820553344.class
+/TempTestCase1526820829500.class
+/internal/
+/CustomKeywords.class
+/TempTestCase1526855235779.class
+/TempTestCase1526855325821.class
+/TempTestCase1526855629430.class
+/TempTestCase1526855987334.class
+/TempTestCase1526856191241.class
+/TempTestSuite1526856369675.class
+/TempTestSuite1526856785096.class
+/TempTestSuite1526857164034.class
