Fixed the flow of UMA Mode

--- a/tests/katalon/Gluu Gateway/bin/lib/.gitignore
+++ b/tests/katalon/Gluu Gateway/bin/lib/.gitignore
@@ -11,3 +11,4 @@
 /TempTestSuite1526856369675.class
 /TempTestSuite1526856785096.class
 /TempTestSuite1526857164034.class
+/TempTestSuite1526858356580.class
