--- a/gg-demo/demo-py-oxd.cfg
+++ b/gg-demo/demo-py-oxd.cfg
@@ -1,15 +1,15 @@
 [oxd]
 host = https://demo.gluu.org:8443/
 https_extension = true
-id = 269017de-20da-4f52-96fb-502e9bd9996f
+id = b4269b27-11d1-4c81-a902-7284d28dbbcc
 
 [client]
 op_host = https://demo.gluu.org
 authorization_redirect_uri = https://demo.gluu.org/demo/cgi-bin/cb.py
-client_id = @!7A1F.7A69.7E9A.EFBA!0001!AD32.2532!0008!729D.0237.95BB.F1A9
-client_secret = 53023964-e469-46ec-88f5-db540b312bee
-client_registration_access_token = c40c0c9c-02aa-47cc-8585-d09e1682a562
-client_registration_client_uri = https://demo.gluu.org/oxauth/restv1/register?client_id=@!7A1F.7A69.7E9A.EFBA!0001!AD32.2532!0008!729D.0237.95BB.F1A9
+client_id = @!7A1F.7A69.7E9A.EFBA!0001!AD32.2532!0008!B059.C0E9.D910.C69E
+client_secret = 144436ce-2102-49b5-a1b9-daddd0d719ce
+client_registration_access_token = e21ca661-f457-47d6-87f2-c12d8c547c89
+client_registration_client_uri = https://demo.gluu.org/oxauth/restv1/register?client_id=@!7A1F.7A69.7E9A.EFBA!0001!AD32.2532!0008!B059.C0E9.D910.C69E
 client_id_issued_at = 1529097884
-protection_access_token = 7364505d-c6ba-462b-a6fc-93dc39dd86d5
+protection_access_token = 7ae08ad2-5d78-42b1-b6eb-bef83340ddcc
 
