--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Package: gluu-gateway
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  postgresql (>= 9.4),
- oxd-server,
+ oxd-server (3.1.3.1),
  nodejs,
  git,
  unzip,
