--- a/konga/bower.json
+++ b/konga/bower.json
@@ -42,7 +42,7 @@
     "angular-utils-pagination": "~0.11.1",
     "angular-chart.js": "~1.0.3",
     "angular-resource": "1.5.*",
-    "mdi": "~1.9.33",
+    "mdi": "2.4.85",
     "angular-base64": "~2.0.5",
     "ngInfiniteScroll": "^1.3.4",
     "angular-xeditable": "^0.7.1",
