working oauth plugin simple test, #197

--- a/t/Dockerfile
+++ b/t/Dockerfile
@@ -7,10 +7,10 @@ RUN apt-get -qqy update && \
     ln -s /usr/bin/luajit /usr/bin/lua && \
     apt-get -qqy install curl git unzip net-tools uuid-runtime
 
-RUN apt-get -qqy install luarocks && \
-    luarocks install busted && \
-    luarocks install LuaSocket && \
-    luarocks install json-lua
+RUN apt-get -qqy update && apt-get -qqy install luarocks && \
+   luarocks install busted && \
+   luarocks install LuaSocket && \
+   luarocks install json-lua
 
 RUN apt-get -qqy install apt-transport-https ca-certificates software-properties-common && \
     curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add && \
