--- a/konga/package.json
+++ b/konga/package.json
@@ -41,7 +41,7 @@
     "include-all": "^1.0.0",
     "ip": "^1.1.5",
     "jsonwebtoken": "5.4.1",
-    "lodash": "3.10.1",
+    "lodash": "^4.17.10",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
