--- a/konga/bower.json
+++ b/konga/bower.json
@@ -47,7 +47,9 @@
     "ngInfiniteScroll": "^1.3.4",
     "angular-xeditable": "^0.7.1",
     "ng-tags-input": "^3.2.0",
-    "ng-idle": "^1.3.2"
+    "ng-idle": "^1.3.2",
+    "later": "^1.2.0",
+    "prettycron": "^0.11.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.13"
