#223: Update kong config and solved bugs in setup script

--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -59,7 +59,7 @@ log_level = debug              # Log level of the Nginx server. Logs are
                                           # adjusted by the `log_level`
                                           # directive.
 
-#plugins = bundled,%(kongCustomPlugins)s               # Comma-separated list of plugins this node
+plugins = bundled,%(kongCustomPlugins)s               # Comma-separated list of plugins this node
                                  # should load. By default, only plugins
                                  # bundled in official distributions are
                                  # loaded via the `bundled` keyword.
