--- a/debian/control
+++ b/debian/control
@@ -10,13 +10,14 @@ Package: gluu-gateway
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  postgresql (>= 9.4),
- oxd-server (>= 3.1.3.1),
+ oxd-server (>= 4.0.0),  
+ oxd-server (<< 4.0.1),
  nodejs,
  git,
  unzip,
  lua-cjson,
  python-requests,
  npm,
- kong-community-edition (= 0.11.0),
+ kong-community-edition (= 0.14.0),
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
