--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "third-party/json-logic-lua"]
 	path = third-party/json-logic-lua
 	url = https://git.rucciva.one/rucciva/json-logic-lua.git
+[submodule "third-party/lua-resty-jwt"]
+	path = third-party/lua-resty-jwt
+	url = git@github.com:cdbattags/lua-resty-jwt.git
+[submodule "third-party/lua-resty-hmac"]
+	path = third-party/lua-resty-hmac
+	url = git@github.com:jkeys089/lua-resty-hmac.git
