fix oxd-server.yml for escaping %

--- a/setup/templates/oxd-server.yml
+++ b/setup/templates/oxd-server.yml
@@ -44,17 +44,17 @@ logging:
     org.gluu: TRACE
     org.xdi: TRACE
 
-# Logback's Time Based Rolling Policy - archivedLogFilenamePattern: /tmp/application-%d{yyyy-MM-dd}.log.gz
-# Logback's Size and Time Based Rolling Policy -  archivedLogFilenamePattern: /tmp/application-%d{yyyy-MM-dd}-%i.log.gz
-# Logback's Fixed Window Rolling Policy -  archivedLogFilenamePattern: /tmp/application-%i.log.gz
+# Logback's Time Based Rolling Policy - archivedLogFilenamePattern: /tmp/application-%%d{yyyy-MM-dd}.log.gz
+# Logback's Size and Time Based Rolling Policy -  archivedLogFilenamePattern: /tmp/application-%%d{yyyy-MM-dd}-%%i.log.gz
+# Logback's Fixed Window Rolling Policy -  archivedLogFilenamePattern: /tmp/application-%%i.log.gz
 
   appenders:
     - type: console
     - type: file
       threshold: INFO
-      logFormat: "%-6level [%d{HH:mm:ss.SSS}] [%t] %logger{5} - %X{code} %msg %n"
+      logFormat: "%%-6level [%%d{HH:mm:ss.SSS}] [%%t] %%logger{5} - %%X{code} %%msg %%n"
       currentLogFilename: /var/log/oxd-server.log
-      archivedLogFilenamePattern: /var/log/oxd-server-%d{yyyy-MM-dd}-%i.log.gz
+      archivedLogFilenamePattern: /var/log/oxd-server-%%d{yyyy-MM-dd}-%%i.log.gz
       archivedFileCount: 7
       timeZone: UTC
       maxFileSize: 10MB
