#223: Update package setup and kong config

--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -96,6 +96,7 @@ plugins = correlation-id,pre-function,cors,rate-limiting,loggly,zipkin,request-s
 #------------------------------------------------------------------------------
 # NGINX
 #------------------------------------------------------------------------------
+nginx_http_lua_shared_dict = gluu_metrics 5M # Shared directory for gluu-metrics
 
 proxy_listen = 0.0.0.0:8000, 0.0.0.0:443 ssl
                          # Comma-separated list of addresses and ports on
