--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://git.rucciva.one/rucciva/json-logic-lua.git
 [submodule "third-party/lua-resty-jwt"]
 	path = third-party/lua-resty-jwt
-	url = git@github.com:cdbattags/lua-resty-jwt.git
+	url = git@github.com:altexy/lua-resty-jwt.git
 [submodule "third-party/lua-resty-hmac"]
 	path = third-party/lua-resty-hmac
 	url = git@github.com:jkeys089/lua-resty-hmac.git
