--- a/debian/gluu-gateway.service
+++ b/debian/gluu-gateway.service
@@ -6,6 +6,7 @@ Requires=postgresql.service kong.service oxd-server-4.0.beta.service
 [Service]
 Type=simple
 ExecStart=/bin/bash -c 'cd /opt/gluu-gateway/konga && /bin/node --harmony app.js --prod >> /var/log/konga.log 2>&1'
+ExecStop=/usr/sbin/fuser -k 1338/tcp
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
 Restart=on-failure
