--- a/debian/kong.service
+++ b/debian/kong.service
@@ -9,7 +9,7 @@ Type=simple
 PIDFile=/usr/local/kong/pids/nginx.pid
 ExecStart=/usr/local/bin/kong start
 ExecStop=/usr/local/bin/kong stop
-ExecReload=/bin/kill -HUP $MAINPID
+ExecReload=/usr/local/bin/kong reload
 KillMode=process
 Restart=on-failure
 RestartSec=10s
