--- a/debian/gluu-gateway.service
+++ b/debian/gluu-gateway.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Gluu-Gateway server daemon
-After=network.target kong.service oxd-server-4.0.beta.service
-Requires=kong.service oxd-server-4.0.beta.service
+After=network.target kong.service oxd-server.service
+Requires=kong.service oxd-server.service
 
 [Service]
 Type=simple
