--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,9 @@ Homepage: https://www.gluu.org
 Package: gluu-gateway
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- postgresql (>= 9.4),
- oxd-server-4.0.beta,
+ postgresql (>= 10),
+ oxd-server (>= 4.0),
+ oxd-server (< 4.0.1),
  nodejs,
  unzip,
  lua-cjson,
