--- a/docker/gluu-gateway.conf
+++ b/docker/gluu-gateway.conf
@@ -1,34 +1,32 @@
-#!/bin/bash
-
 #--- SETTING GLUU-GATEWAY CONFIGURATION VALUES ---
 
 # Do you acknowledge that use of the Gluu Gateway is under the Stepped-Up Support License? (y|N)
-LICENSE=""
+LICENSE='Y'
 
 # Enter IP Address
-IP_ADDRESS=""
+IP_ADDRESS='10.0.2.15'
 
 # Enter kong hostname
-HOSTNAME=""
+HOSTNAME='localhost'
 
 # The next few variables are used to generate the Kong self-signed HTTPS certificate
-TWO_LETTER_COUNTRY_CODE=""
-TWO_LETTER_STATE_CODE=""
-CITY_OR_LOCATION=""
-ORGANIZATION_NAME=""
-EMAIL_ADDRESS=""
+TWO_LETTER_COUNTRY_CODE='aa'
+TWO_LETTER_STATE_CODE='aa'
+CITY_OR_LOCATION='aa'
+ORGANIZATION_NAME='aa'
+EMAIL_ADDRESS='aa@aa.am'
 
 # Enter existing or new password for Postgres DB 
-PGSQL_PASSWORD=""
+PGSQL_PASSWORD='aa'
 
 # OP hostname
-OP_HOST=""
+OP_HOST='ce-dev6.gluu.org'
 
 # oxd server url
-OXD_SERVER_URL=""
+OXD_SERVER_URL='https:\/\/localhost:8443'
 
 # Generate client creds to call oxd-server API's? (y|N) 
-GENERATE_CLIENT_CREDS_FOR_OXD=""
-OXD_ID=""
-CLIENT_ID=""
-CLIENT_SECRET=""
+GENERATE_CLIENT_CREDS_FOR_OXD='Y'
+OXD_ID=''
+CLIENT_ID=''
+CLIENT_SECRET=''
