--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,27 +8,17 @@ RUN apt install -y \
      python \
      apt-transport-https \
      curl \
-     wget
+     wget \
+     sudo \
+     net-tools 
 RUN echo "deb https://repo.gluu.org/ubuntu/ xenial main" > /etc/apt/sources.list.d/gluu-repo.list
 RUN curl https://repo.gluu.org/ubuntu/gluu-apt.key | apt-key add -
 RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" > /etc/apt/sources.list.d/psql.list
 RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
 RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
 RUN apt-get install -y \
-     postgresql=11+* \
-     oxd-server=4.0-* \
-     nodejs \
-     unzip \
-     lua-cjson \
-     python-requests \
-     kong-community-edition
+     gluu-gateway=1.0-*
 EXPOSE 1338
-ADD setup /opt/gluu-gateway/setup
-ADD kong /opt/gluu-gateway/kong
-ADD konga /opt/gluu-gateway/konga
-ADD third-party /opt/gluu-gateway/third-party
-ADD gg_bower_components.tar.gz /opt/gluu-gateway/dist
-ADD gg_node_modules.tar.gz /opt/gluu-gateway/dist
-ADD setup-gluu-gateway_template.py /setup-gluu-gateway_template.py
 ADD run.sh /run.sh
+ADD setup-gluu-gateway_template.py /setup-gluu-gateway_template.py
 ENTRYPOINT ["/run.sh"]
