--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,8 @@ Package: gluu-gateway
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  postgresql (>= 10),
- oxd-server (= 4.0-60),
+ oxd-server (<< 4.0-60),
+ oxd-server (>= 4.0-59),
  nodejs,
  unzip,
  lua-cjson,
