--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  postgresql (>= 10),
  oxd-server (>= 3.1.2),
- oxd-server (< 4.0),
+ oxd-server (< 4.0-59),
  nodejs,
  unzip,
  lua-cjson,
