--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Package: gluu-gateway
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  postgresql (>= 10),
- oxd-server (= 3.1.3-17~xenial+Ub16.04),
+ oxd-server=3.1.3-17~xenial+Ub16.04,
  nodejs,
  unzip,
  lua-cjson,
