--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,7 @@ Homepage: https://www.gluu.org
 
 Package: gluu-gateway
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends},
- postgresql (>= 10),
+Depends: postgresql (>= 10),
  oxd-server (= 3.1.3-17~xenial+Ub16.04),
  nodejs,
  unzip,
