--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,9 @@ Homepage: https://www.gluu.org
 
 Package: gluu-gateway
 Architecture: any
-Depends: postgresql (>= 10),
- oxd-server (= 3.1.3-17~xenial+Ub16.04),
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ postgresql (>= 10),
+ oxd-server (= 4.0-60~xenial+Ub16.04),
  nodejs,
  unzip,
  lua-cjson,
