--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -126,7 +126,7 @@ proxy_listen = 0.0.0.0:8000, 0.0.0.0:443 ssl
 # Note bis: see https://www.nginx.com/resources/admin-guide/proxy-protocol/
 # for more details about the `proxy_protocol` parameter.
 
-admin_listen = 127.0.0.1:8001, 127.0.0.1:%(kongAdminListenSsl)s ssl
+admin_listen = 127.0.0.1:%(kongAdminListenPort)s, 127.0.0.1:%(kongAdminListenSslPort)s ssl
                          # Comma-separated list of addresses and ports on
                          # which the Admin interface should listen.
                          # The Admin interface is the API allowing you to
