#319: Update config templates and oxd setup

--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -59,7 +59,7 @@ log_level = debug              # Log level of the Nginx server. Logs are
                                           # adjusted by the `log_level`
                                           # directive.
 
-plugins = correlation-id,pre-function,cors,rate-limiting,loggly,zipkin,request-size-limiting,azure-functions,request-transformer,response-transformer,ip-restriction,statsd,http-log,datadog,tcp-log,post-function,acl,prometheus,response-ratelimiting,udp-log,file-log,aws-lambda,syslog,bot-detection,request-termination,%(kongCustomPlugins)s               # Comma-separated list of plugins this node
+plugins = correlation-id,pre-function,cors,rate-limiting,loggly,zipkin,request-size-limiting,azure-functions,request-transformer,response-transformer,ip-restriction,statsd,http-log,datadog,tcp-log,post-function,acl,prometheus,response-ratelimiting,udp-log,file-log,aws-lambda,syslog,bot-detection,request-termination,%(kong_custom_plugins)s               # Comma-separated list of plugins this node
                                  # should load. By default, only plugins
                                  # bundled in official distributions are
                                  # loaded via the `bundled` keyword.
@@ -126,7 +126,7 @@ proxy_listen = 0.0.0.0:8000, 0.0.0.0:443 ssl
 # Note bis: see https://www.nginx.com/resources/admin-guide/proxy-protocol/
 # for more details about the `proxy_protocol` parameter.
 
-admin_listen = 127.0.0.1:%(kongAdminListenPort)s, 127.0.0.1:%(kongAdminListenSslPort)s ssl
+admin_listen = 127.0.0.1:%(kong_admin_listen_port)s, 127.0.0.1:%(kong_admin_listen_ssl_port)s ssl
                          # Comma-separated list of addresses and ports on
                          # which the Admin interface should listen.
                          # The Admin interface is the API allowing you to
@@ -180,10 +180,10 @@ admin_listen = 127.0.0.1:%(kongAdminListenPort)s, 127.0.0.1:%(kongAdminListenSsl
                                  # This value is ignored if `ssl_cipher_suite`
                                  # is not `custom`.
 
-ssl_cert = %(kongSslCert)s                     # The absolute path to the SSL certificate for
+ssl_cert = %(kong_ssl_cert)s                     # The absolute path to the SSL certificate for
                                  # `proxy_listen` values with SSL enabled.
 
-ssl_cert_key = %(kongSslKey)s                  # The absolute path to the SSL key for
+ssl_cert_key = %(kong_ssl_key)s                  # The absolute path to the SSL key for
                                  # `proxy_listen` values with SSL enabled.
 
 #client_ssl = off                # Determines if Nginx should send client-side
@@ -203,10 +203,10 @@ ssl_cert_key = %(kongSslKey)s                  # The absolute path to the SSL ke
                                  # node, and currently cannot be configured on
                                  # a per-API basis.
 
-admin_ssl_cert = %(kongSslCert)s               # The absolute path to the SSL certificate for
+admin_ssl_cert = %(kong_ssl_cert)s               # The absolute path to the SSL certificate for
                                  # `admin_listen` values with SSL enabled.
 
-admin_ssl_cert_key = %(kongSslKey)s           # The absolute path to the SSL key for
+admin_ssl_cert_key = %(kong_ssl_key)s           # The absolute path to the SSL key for
                                  # `admin_listen` values with SSL enabled.
 
 #upstream_keepalive = 60         # Sets the maximum number of idle keepalive
@@ -331,7 +331,7 @@ database = postgres             # Determines which of PostgreSQL or Cassandra
 pg_host = 127.0.0.1             # The PostgreSQL host to connect to.
 pg_port = 5432                  # The port to connect to.
 pg_user = postgres                  # The username to authenticate if required.
-pg_password = %(pgPwd)s                  # The password to authenticate if required.
+pg_password = %(pg_pwd)s                  # The password to authenticate if required.
 pg_database = kong              # The database name to connect to.
 
 #pg_ssl = off                    # Toggles client-server TLS connections
