Update the setup script to configure the kong lua_ssl_trusted_certificate and lua_ssl_verify_depth #351

--- a/setup/templates/kong.conf
+++ b/setup/templates/kong.conf
@@ -517,14 +517,14 @@ pg_database = kong              # The database name to connect to.
 # See the lua-nginx-module documentation for more informations:
 # https://github.com/openresty/lua-nginx-module
 
-#lua_ssl_trusted_certificate =   # Absolute path to the certificate
+lua_ssl_trusted_certificate = %(kong_lua_ssl_trusted_certificate)s  # Absolute path to the certificate
                                  # authority file for Lua cosockets in PEM
                                  # format. This certificate will be the one
                                  # used for verifying Kong's database
                                  # connections, when `pg_ssl_verify` or
                                  # `cassandra_ssl_verify` are enabled.
 
-#lua_ssl_verify_depth = 1        # Sets the verification depth in the server
+lua_ssl_verify_depth = %(kong_lua_ssl_verify_depth)s        # Sets the verification depth in the server
                                  # certificates chain used by Lua cosockets,
                                  # set by `lua_ssl_trusted_certificate`.
                                  # This includes the certificates configured
