--- a/debian/control
+++ b/debian/control
@@ -16,5 +16,6 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  python-requests,
  npm,
  kong-community-edition (= 0.14.1),
+ ca-certificates,
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
