--- a/debian/service.files/konga.service
+++ b/debian/service.files/konga.service
@@ -7,7 +7,7 @@ PartOf=gluu-gateway.service
 [Service]
 Type=simple
 PIDFile=/var/run/konga.pid
-ExecStart=/bin/bash -c 'cd /opt/gluu-gateway/konga && /bin/node --harmony app.js --prod >> /var/log/konga.log 2>&1'
+ExecStart=/bin/bash -c 'cd /opt/gluu-gateway/konga && /usr/bin/node --harmony app.js --prod >> /var/log/konga.log 2>&1'
 Restart=on-failure
 RestartSec=12s
 
