--- a/debian/service.files/gluu-gateway.service
+++ b/debian/service.files/gluu-gateway.service
@@ -6,7 +6,7 @@ Requires=konga.service kong.service oxd-server.service
 [Service]
 Type=forking
 ExecStart=/bin/bash -c ''
-ExecStop=/bin/bash -c ''
+ExecStop=/bin/bash -c '/opt/oxd-server/bin/oxd-server.sh stop || /bin/kill -9 `cat /var/run/oxd-server.pid`'
 RemainAfterExit=yes
 
 [Install]
