--- a/setup/gg-kong-node.conf
+++ b/setup/gg-kong-node.conf
@@ -59,7 +59,7 @@ log_level = debug              # Log level of the Nginx server. Logs are
                                           # is adjusted by the `log_level`
                                           # property.
 
-plugins = correlation-id,pre-function,cors,rate-limiting,loggly,zipkin,request-size-limiting,azure-functions,request-transformer,response-transformer,ip-restriction,statsd,http-log,datadog,tcp-log,post-function,acl,prometheus,response-ratelimiting,udp-log,file-log,aws-lambda,syslog,bot-detection,request-termination,%(kong_custom_plugins)s              # Comma-separated list of plugins this node
+plugins = bundled,%(kong_custom_plugins)s              # Comma-separated list of plugins this node
                                  # should load. By default, only plugins
                                  # bundled in official distributions are
                                  # loaded via the `bundled` keyword.
