increase large_client_header_buffers for large cookies, #390

--- a/Dockerfile.gluu_gateway
+++ b/Dockerfile.gluu_gateway
@@ -29,3 +29,4 @@ ENV KONG_PROXY_ACCESS_LOG /dev/stdout
 ENV KONG_ADMIN_ACCESS_LOG /dev/stdout
 ENV KONG_PROXY_ERROR_LOG /dev/stderr
 ENV KONG_ADMIN_ERROR_LOG /dev/stderr
+ENV KONG_NGINX_HTTP_LARGE_CLIENT_HEADER_BUFFERS "8 16k"
